# t5chem

./: .gitignore  MW Predict.ipynb  eval.sh  pyproject.toml  requirements.txt  run_tensorboard.sh  shell.info.txt  simple examples 反应预测.ipynb  test.ipynb  test.py  train the model.ipynb  train.sh  zsl.md  命令行的使用.ipynb  数据流.ipynb
t5chem/: run_trainer.py  trainer.py
