[tool.poetry]
name = "t5chem_zsl"
version = "0.1.0"
description = ""
authors = ["zhaisilong <zhaisilong@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
